--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -177,7 +177,7 @@ iframe {
   margin-bottom: 30px;
 }
 .section .section-inner {
-  text-align: justify;
+  text-align:
   background: #fff;
   padding: 30px;
   border-radius: 10px;
