--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: justify;
 }
 h1,
 h2,
@@ -177,7 +178,6 @@ iframe {
   margin-bottom: 30px;
 }
 .section .section-inner {
-  text-align:
   background: #fff;
   padding: 30px;
   border-radius: 10px;
