--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,6 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: justify;
 }
 h1,
 h2,
@@ -33,7 +32,7 @@ a {
   -ms-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
 }
-
+p{  text-align: justify;}
 h6 {
   text-align: -webkit-center;
 }
