--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,6 +37,11 @@ a {
 h6 {
   text-align: -webkit-center;
 }
+
+h5 {
+
+}
+
 a:hover {
   text-decoration: underline;
   color: #5eb3ce;
@@ -153,7 +158,7 @@ iframe {
   font-weight: 400;
   font-size: 24px;
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 0;
 }
 
 .header .profile-content .social a {
